# github-explorer

./: .gitignore  APPROACH_SUMMARY.md  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  gh-explorer.py  hello.py  pyproject.toml
docs/: README.md
gh_explorer/: cli.py
gh_explorer/api/: __init__.py  client.py
gh_explorer/data/: __init__.py
gh_explorer/ui/: __init__.py
gh_explorer/ui/screens/: __init__.py  code_search.py  main_menu.py  repo_search.py
gh_explorer/ui/widgets/: __init__.py  repo_browser.py
gh_explorer/utils/: formatting.py
