[project]
name = "gh-explorer"
version = "0.1.0"
description = "A shell-integrated tool for exploring GitHub"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude User", email = "example@example.com"}
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
ghx = "gh_explorer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["gh_explorer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
