[project]
name = "gh-explorer"
version = "0.1.0"
description = "A shell-integrated tool for exploring GitHub"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude User", email = "example@example.com"}
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/taygetea/github-explorer"
"Bug Tracker" = "https://github.com/taygetea/github-explorer/issues"
"Repository" = "https://github.com/taygetea/github-explorer.git"

[project.scripts]
ghx = "gh_explorer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.0.263",
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["gh_explorer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
